Fix a crash due to null QHostAddress in the TCP/IP backend

When called in boot phases of embedded devices, host name resolution
can fail, resulting in an assert/crash. Bail out with a warning
instead.

Pick-to: 6.5 6.2 5.15
Fixes: QTBUG-116151
Change-Id: I1d8465bd35ff250d3a4b9dbde53bd6634ae70fc6
Reviewed-by: Brett Stottlemyer <bstottle@ford.com>
(cherry picked from commit 65dbc006c81ccaea6af5f0b1e2425cfdb2158325)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>